# numproof

./: .gitignore  LICENSE  README.md  RECEIPT_FORMAT.md  comparison.md  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml
examples/: agent_gate.py  audit_spreadsheet.py  covenants.py  deepeval_metric.py  guardrail_guardrails_ai.py  guardrail_langchain.py  guardrail_openai_agents.py  guardrail_pydantic_ai.py  mcp_config.json  receipt_example.json  verify_claim.py
numproof/: __init__.py  client.py  mcp.py  recheck.py
numproof/integrations/: __init__.py  deepeval.py  guardrails.py  langchain.py  openai_agents.py  pydantic_ai.py
