[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "numproof"
version = "0.1.0"
description = "Deterministic numeric & financial verification for AI agents and spreadsheets — thin client for the hosted NumProof API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["verification", "ai-agents", "spreadsheet", "finance", "mcp", "deterministic", "audit", "llm-guardrails"]
authors = [{ name = "NumProof" }]
dependencies = []   # core SDK is stdlib-only

[project.optional-dependencies]
# offline receipt re-checker (numproof-verify): signature recovery + commodity re-derivation
verify = ["eth-account>=0.13,<0.16", "sympy>=1.12,<2"]

[project.urls]
Homepage = "https://numproof.com"
Documentation = "https://numproof.com/docs"
Source = "https://github.com/projecttron/numproof"

[project.scripts]
numproof-mcp = "numproof.mcp:main"
numproof-verify = "numproof.recheck:main"

[tool.setuptools.packages.find]
include = ["numproof*"]
